tests/files/flow_controller_tests/should_fail/027.cmdr
x = false;
print log(x);